# referer-parser

haskell/: .gitignore  TODO.org  extra.yml  referer-parser.cabal  referrer-parser.cabal
haskell/data/: referers.yml
haskell/src/Web/RefererParser/: Lookup.hs  Types.hs
haskell/test/: Main.hs
