name:                referer-parser
version:             0.0.0.0
synopsis:            Haskell port of the referrer-parser project
-- description:
license:             BSD3
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  data/referers.yml
cabal-version:       >=1.16

library
  exposed-modules: 
    Web.RefererParser.Types
    Web.RefererParser.Lookup

  build-depends:       
      aeson
    , base                   >=4.6         && <4.8
    , bifunctors
    , file-embed
    , hashable               >= 1.2.2      && < 1.3
    , semigroups
    , text
    , unordered-containers   >= 0.2.4      && < 0.3
    , uri                    >= 0.1.6.2
    , yaml

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -Wall -Werror

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      aeson
    , HUnit
    , base >=4.6 && <4.8
    , bifunctors
    , file-embed
    , hashable
    , referer-parser
    , semigroups
    , tasty
    , tasty-hunit
    , text
    , unordered-containers
    , uri >= 0.1.6.2
    , yaml
  default-language:    Haskell2010

